fix uneven spacing caused by HRs

--- a/app/assets/stylesheets/hera/layout.scss
+++ b/app/assets/stylesheets/hera/layout.scss
@@ -112,7 +112,7 @@ header {
 hr {
   border-bottom: solid 2px rgba(0, 0, 0, 0.25);
   border-top: 0;
-  margin: 1.25rem 0;
+  margin: 1rem 0;
 
   &.small {
     border-bottom: solid 5px rgba(0, 0, 0, 0.25);
